added main and sub pages

--- a/index.html
+++ b/index.html
@@ -4,49 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Katheren.Design</title>
+    <title>Portfolio | Home</title>
 
 <!-- MAIN CSS FILE -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/jqp7rso.css">
 
 </head>
 
 
 <body>
-    <header class="site-header on-top-of-hero">
-        <div class="site-logo">
-            <a href="index.html">
-                <img src="img/ohwhale_logo.png" alt="ohwhale.co logo" width="50" height="50">
-            </a>
-            <h1 class="hide-visually"><a href="index.html">Katheren.Design</a></h1>
+    <header class="site-header toggle-nav animated">
+        <div class="site-id">
+            <h1><a href="index.html"><img src="img/katheren_pfp.png" alt="katheren logo" width="65" height="65"></a></h1>
         </div>
-
         <nav class="site-navigation">
             <button class="menu-button navicon">Menu</button>
             <ul class="nav">
                 <li class="hidden"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Works</a></li>
+                <li><a href="works.html">Works</a></li>
             </ul>
         </nav>
-        <!-- <nav class="site-header-nav toggle-menu" data-menustate="closed">
-            <button class="site-menu-button">
-                <span class="hide-visually">Menu</span>
-                <svg class="simple-navicon" width="24" height="21">
-                    <rect class="simple-navicon-top" x="0" y="2" height="3" width="24"></rect>
-                    <rect class="simple-navicon-middle" x="0" y="9" height="3" width="24"></rect>
-                    <rect class="simple-navicon-bottom" x="0" y="16" height="3" width="24"></rect>
-                </svg>
-            </button>
-            <ul class="site-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="upcoming.html">Upcoming</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="cart.html">Cart</a></li>
-            </ul>
-            
-        </nav> -->
     </header>
 
     <main class="site-main">
@@ -68,13 +47,11 @@
 
     <footer class="site-footer">
         <div class="container">
-            <nav class="site-footer-nav">
-                <ul>
+            <nav class="site-navigation">
+                <ul class="nav">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="upcoming.html">Upcoming</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="cart.html">Cart</a></li>
+                    <li><a href="works.html">Works</a></li>
                 </ul>
             </nav>
         </div>
