added content to home page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.typekit.net/jqp7rso.css">
 
+
 </head>
 
 
@@ -32,12 +33,24 @@
         
         <section class="hero">
             <div class="container">
-
+                <h1>Katheren's Space</h1>
             </div>
         </section>
 
-        <section>
+        <section class="landing">
             <div class="container">
+                <div class="row">
+                    <div class="one-third column">
+                        <img src="img/about.jpg" alt="Profile Picture">
+                    </div>
+                    <div class="two-thirds column">
+                        <h2>Hello</h2>
+                        <p>My name is Katheren, I’m a creative designer seeking to learn more about the field of design and experiment with different visual styles.</p>
+
+                        <h3>Contact</h3>
+                        <p><a href="https://drive.google.com/file/d/1qKnmNC08R06--_im8tLK4datLahe3G0B/view" target="#">Check Out My Resume</a></p>
+                    </div>
+                </div>
 
             </div>
         </section>
