testing works page layout

--- a/index.html
+++ b/index.html
@@ -48,10 +48,30 @@
                         <p>My name is Katheren, I’m a creative designer seeking to learn more about the field of design and experiment with different visual styles.</p>
 
                         <h3>Contact</h3>
-                        <p><a href="https://drive.google.com/file/d/1qKnmNC08R06--_im8tLK4datLahe3G0B/view" target="#">Check Out My Resume</a></p>
+                        <p>Email: <a href="mailto:katheren@hawaii.edu">katheren@hawaii.edu</a></p>
+                        <p><a class="button" href="https://drive.google.com/file/d/1qKnmNC08R06--_im8tLK4datLahe3G0B/view" target="#">Check Out My Resume</a></p>
                     </div>
                 </div>
 
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="one-fourth column">
+                        <img src="img/placeholder.png" alt="">
+                    </div>
+                    <div class="one-fourth column">
+                        <img src="img/placeholder.png" alt="">
+                    </div>
+                    <div class="one-fourth column">
+                        <img src="img/placeholder.png" alt="">
+                    </div>
+                    <div class="one-fourth column">
+                        <img src="img/placeholder.png" alt="">
+                    </div>
+                </div>
             </div>
         </section>
 
