--- a/works.html
+++ b/works.html
@@ -34,7 +34,7 @@
                 <h2>Courses</h2>
             </section> -->
 
-            <section>
+            <!-- <section>
                 <div class="row">
                     <div class="one-third column">
                         <a href="corporate.html">
@@ -55,34 +55,29 @@
                     </div>
 
                 </div>
-            </section>
-
-            <section>
-                <div class="row">
-                    
-
-                    <div class="one-third column">
-                        <a href="visualessay.html">
-                            <img src="img/kk_logo_purple.jpg" alt="placeholder" width="1000" height="1000">
-                        </a>
-                    </div>
-
-                    <div class="one-third column">
-                        <a href="clientsite.html">
-                            <img src="img/ohwhaledotco.jpg" alt="ohwhale.co cover" width="1000" height="1000">
-                        </a>
-                    </div>
-
-                    <!-- <div class="one-third column">
-                        <a href="#">
-                            <img src="img/placeholder.png" alt="placeholder" width="1000" height="1000">
-                        </a>
-                    </div> -->
-
-                </div>
-            </section>
-
+            </section> -->
         </div>
+
+        <section class="fill">
+            <div class="row">
+                <div class="one-half fill">
+                    <img src="img/placeholder.png" alt="">
+                </div>
+                <div class="one-half fill">
+                    <img src="img/placeholder.png" alt="">
+                </div>
+            </div>
+            <div class="row">
+                <div class="one-half fill">
+                    <img src="img/placeholder.png" alt="">
+                </div>
+                <div class="one-half fill">
+                    <img src="img/placeholder.png" alt="">
+                </div>
+
+            </div>
+        </section>
+
         <!-- END CONTAINER -->
     </main>
 
