update home page about content

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
         <section class="hero">
             <div class="container">
-                <h1>Katheren's Space</h1>
+                <h1><i>Katheren's Studio</i></h1>
             </div>
         </section>
 
@@ -45,7 +45,9 @@
                     </div>
                     <div class="two-thirds column">
                         <h2>Hello</h2>
-                        <p>My name is Katheren, I’m a creative designer seeking to learn more about the field of design and experiment with different visual styles.</p>
+                        <p>My name is Katheren Jia-Li Lam. 嘉 (Jia) meaning auspicious, 麗 (Li) meaning beauty,and 林 (Lam, also read as Lin or Lum) meaning forest.</p>
+                        <p>I am a creator who’s learning wherever life takes me. I started my design career in 2022 at Kapiʻolani Community College after studying Business for 2 years.</p>
+                        <p>When I’m not working, I enjoy playing video games, crocheting, and cooking!</p>
 
                         <h3>Contact</h3>
                         <p>Email: <a href="mailto:katheren@hawaii.edu">katheren@hawaii.edu</a></p>
