--- a/works.html
+++ b/works.html
@@ -61,7 +61,7 @@
         <section class="fill">
             <div class="row">
                 <div class="one-half fill">
-                    <img src="img/placeholder.png" alt="">
+                    <img src="img/flowerknows_color.png" alt="">
                 </div>
                 <div class="one-half fill">
                     <img src="img/placeholder.png" alt="">
