works page set up

--- a/trilogy.html
+++ b/trilogy.html
@@ -59,22 +59,14 @@
                         <img src="img/trilogy_mockup_b3.png" alt="trilogy_mockup_b3" width="332" height="231">
                     </div>
                 </div>
-                <div class="row">
-                    
-                    <div class="column">
-                        <img src="img/trilogy_b1.png" alt="Museum of Broken Relationships" width="1120" height="500">
-                    </div>
+                <div>
+                    <img src="img/trilogy_b1.png" alt="Museum of Broken Relationships" width="1120" height="500">
+
+                    <img src="img/trilogy_b2.png" alt="How Have You Been?" width="1120" height="500">
+
+                    <img src="img/trilogy_b3.png" alt="Lost and Found" width="1120" height="500">
                 </div>
-                <div class="row">
-                    <div class="column">
-                        <img src="img/trilogy_b2.png" alt="How Have You Been?" width="1120" height="500">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="column">
-                        <img src="img/trilogy_b3.png" alt="Lost and Found" width="1120" height="500">
-                    </div>
-                </div>
+                
             </div>
         </section>
 
