--- a/works.html
+++ b/works.html
@@ -28,53 +28,38 @@
         </nav>
     </header>
 
-    <main class="site-main">
-        <div class="container">
-            <!-- <section class="hero text-centered">
-                <h2>Courses</h2>
-            </section> -->
-
-            <!-- <section>
-                <div class="row">
-                    <div class="one-third column">
-                        <a href="corporate.html">
-                            <img src="img/flowerknows_color.png" alt="Coroporate Logo resdesign potion bottle" width="1000" height="1000">
-                        </a>
-                    </div>
-
-                    <div class="one-third column">
-                        <a href="tourism.html">
-                            <img src="img/cologne_color.png" alt="Cologne tourism logo" width="1000" height="1000">
-                        </a>
-                    </div>
-
-                    <div class="one-third column">
-                        <a href="trilogy.html">
-                            <img src="img/trilogy125.png" alt="placeholder" width="1000" height="1000">
-                        </a>
-                    </div>
-
-                </div>
-            </section> -->
-        </div>
-
-        <section class="fill">
+    <main class="site-main works">
+        <section>
             <div class="row">
-                <div class="one-half fill">
-                    <img src="img/flowerknows_color.png" alt="">
+                <div class="one-half">
+                    <a href="corporate.html"><img src="img/flowerknows_color.png" alt="Flower Knows Corporate Logo"></a>
+                    
                 </div>
-                <div class="one-half fill">
-                    <img src="img/placeholder.png" alt="">
+                <div class="one-half">
+                    <img src="img/ohwhaledotco.jpg" alt="">
                 </div>
             </div>
-            <div class="row">
-                <div class="one-half fill">
-                    <img src="img/placeholder.png" alt="">
-                </div>
-                <div class="one-half fill">
-                    <img src="img/placeholder.png" alt="">
-                </div>
+        </section>
 
+        <section>
+            <div class="row">
+                <div class="one-half">
+                    <img src="img/kk_logo_purple.jpg" alt="">
+                </div>
+                <div class="one-half">
+                    <img src="img/trilogy125.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="row">
+                <div class="one-half">
+                    <img src="img/cologne_color.png" alt="">
+                </div>
+                <div class="one-half">
+                    <img src="img/placeholder.png" alt="">
+                </div>
             </div>
         </section>
 
