--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="row">
                     <div class="one-third column">
-                        <img src="img/about.jpg" alt="Profile Picture">
+                        <img src="img/profile_kl.jpg" alt="Profile Picture">
                     </div>
                     <div class="two-thirds column">
                         <h2>Hello</h2>
@@ -62,16 +62,16 @@
             <div class="container">
                 <div class="row">
                     <div class="one-fourth column">
-                        <img src="img/placeholder.png" alt="">
+                        <img src="img/corp_color.png" alt="">
                     </div>
                     <div class="one-fourth column">
-                        <img src="img/placeholder.png" alt="">
+                        <img src="img/ohwhaledotco.jpg" alt="">
                     </div>
                     <div class="one-fourth column">
-                        <img src="img/placeholder.png" alt="">
+                        <img src="img/kk_logo_purple.jpg" alt="">
                     </div>
                     <div class="one-fourth column">
-                        <img src="img/placeholder.png" alt="">
+                        <img src="img/cologne_color.png" alt="">
                     </div>
                 </div>
             </div>
