--- a/works.html
+++ b/works.html
@@ -32,7 +32,7 @@
         <section>
             <div class="row">
                 <div class="one-half">
-                    <a href="corporate.html"><img src="img/flowerknows_color.png" alt="Flower Knows Corporate Logo"></a>
+                    <a href="corporate.html"><img src="img/corp_color.png" alt="Flower Knows Corporate Logo"></a>
                     
                 </div>
                 <div class="one-half">
