new about page, color and adjusted works page

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <body>
     <header class="site-header toggle-nav animated">
         <div class="site-id">
-            <h1><a href="index.html"><img src="img/katheren_pfp.png" alt="katheren logo" width="65" height="65"></a></h1>
+            <h1><a href="index.html"><img src="img/katheren_graphic.png" alt="katheren logo" width="65" height="65"></a></h1>
         </div>
         <nav class="site-navigation">
             <button class="menu-button navicon">Menu</button>
@@ -35,23 +35,68 @@
         </section> -->
         <div class="container">
             <section>
-                <div class="row">
+                <div class="row centered">
+                    <div class="one-fourth column about">
+                        <img src="img/katheren_profile.jpg" alt="about me image" width="2228" height="2971">
+                    </div>
+                    <div class="one-half column">
+                        <h2>Hello</h2>
+                        <p>I am an interface design student at Kapi‘olani Community College seeking to learn more about the field of design and experiment with different visual styles. I do a little bit of everything and strive to be a versatile creator.</p>
+                    </div>
+            </section>
+
+            <section>
+                <div class="row no-deco">
                     <div class="one-third column">
-                        <img src="img/about.jpg" alt="about me image" width="2228" height="2971">
+                        <h3>Education</h3>
+                        <ul>
+                            <li>Kapi‘olani Community College</li>
+                            <li>A.S. New Media Arts Interface Design</li>
+                            <li>August 2022 - Present</li>
+                        </ul>
+                        <ul>
+                            <li>Kapi‘olani Community College</li>
+                            <li>A.A. Liberal Arts Business</li>
+                            <li>August 2020 - May 2022</li>
+                        </ul>
+                            
+                        
                     </div>
-                    <div class="two-thirds column">
-                        <h2>Katheren Lam</h2>
-                        <h4>Graphic Designer</h4>
-                        <p>
-                            I am an interface design student at Kapi‘olani Community College seeking to learn more about the field of design and experiment with different visual styles. I do a little bit of everything and strive to be a versatile creator.
-                        </p>
-                        <p>
-                            <a class="button alt" href="https://go.hawaii.edu/v4a" target="#">Check out my resume</a>
-                        </p>
-                        <!-- <p>
-                           My style is inspired and comprised of simple line work, whimsical concepts, and Asian influences.
-                        </p> -->
+
+                    <div class="one-third column">
+                        <h3>Skills</h3>
+                        <ul>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sparkle"><path d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"/></svg>Adobe Software</li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sparkle"><path d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"/></svg>Figma</li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sparkle"><path d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"/></svg>Public Speaking</li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sparkle"><path d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"/></svg>Front End Web Development</li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sparkle"><path d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"/></svg>UI/UX Development</li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sparkle"><path d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"/></svg>2D Digital Design</li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sparkle"><path d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"/></svg>2D Traditional Design</li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sparkle"><path d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"/></svg>Coding (HTML, CSS, JS)</li>
+                        </ul>
                     </div>
+
+                    <div class="one-third column">
+                        <h3>Experience</h3>
+                        <ul>
+                            <li>Kalani High School</li>
+                            <li>Air Riflery Head Coach</li>
+                            <li>July 2021 - Present</li>
+                        </ul>
+                        <ul>
+                            <li>Kapi‘olani Community College</li>
+                            <li>Board of Student Publications Member</li>
+                            <li>March 2021 - Present</li>
+                        </ul>
+                        <ul>
+                            <li>Kapāolono Community Park</li>
+                            <li>Summer Student Aide II</li>
+                            <li>May 2023 - August 2023</li>
+                        </ul> 
+                    </div>
+
+                </div>
             </section>
         </div>        
         <!-- END CONTAINER -->
