--- a/about_v1.html
+++ b/about_v1.html
@@ -28,36 +28,32 @@
         </nav>
     </header>
 
-    <main class="site-main works">
-        <section>
-            <div class="row">
-                <div class="one-half">
-                    <div class="img-hold grow">
-                        <a href="placeholder.html"></a><img src="img/flowerknows_bottle.jpg" alt="placeholder">
+    <main class="site-main">
+        <!-- <section class="hero text-centered">
+            <h1>About Me</h1>
+            <p>This is a sub page example with a hero at top and stacked sections below.</p>
+        </section> -->
+        <div class="container">
+            <section>
+                <div class="row">
+                    <div class="one-third column">
+                        <img src="img/katheren_profile.jpg" alt="about me image" width="2228" height="2971">
                     </div>
-                </div>
-                <div class="one-half">
-                    <div class="img-hold grow">
-                        <a href="placeholder.html"></a><img src="img/placeholder.png" alt="placeholder">
+                    <div class="two-thirds column">
+                        <h2>Katheren Lam</h2>
+                        <h4>Graphic Designer</h4>
+                        <p>
+                            I am an interface design student at Kapi‘olani Community College seeking to learn more about the field of design and experiment with different visual styles. I do a little bit of everything and strive to be a versatile creator.
+                        </p>
+                        <p>
+                            <a class="button alt" href="https://go.hawaii.edu/v4a" target="#">Check out my resume</a>
+                        </p>
+                        <!-- <p>
+                           My style is inspired and comprised of simple line work, whimsical concepts, and Asian influences.
+                        </p> -->
                     </div>
-                </div>
-            </div>
-        </section>
-        <section>
-            <div class="row">
-                <div class="one-half">
-                    <div class="img-hold grow">
-                        <a href="placeholder.html"></a><img src="img/placeholder.png" alt="placeholder">
-                    </div>
-                </div>
-                <div class="one-half">
-                    <div class="img-hold grow">
-                        <a href="placeholder.html"></a><img src="img/placeholder.png" alt="placeholder">
-                    </div>
-                </div>
-            </div>
-        </section>
-
+            </section>
+        </div>        
         <!-- END CONTAINER -->
     </main>
 
