--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="site-header toggle-nav animated">
         <div class="site-id">
-            <h1><a href="index.html"><img src="img/katheren_pfp.png" alt="katheren logo" width="65" height="65"></a></h1>
+            <h1><a href="index.html"><img src="img/katheren_graphic.png" alt="katheren logo" width="65" height="65"></a></h1>
         </div>
         <nav class="site-navigation">
             <button class="menu-button navicon">Menu</button>
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="row">
                     <div class="one-third column">
-                        <img src="img/profile_kl.jpg" alt="Profile Picture">
+                        <img src="img/katheren_profile.jpg" alt="Profile Picture">
                     </div>
                     <div class="two-thirds column">
                         <h2>Hello</h2>
@@ -62,13 +62,13 @@
             <div class="container">
                 <div class="row">
                     <div class="one-fourth column">
-                        <img src="img/corp_color.png" alt="">
+                        <img src="img/flowerknows_color.png" alt="">
                     </div>
                     <div class="one-fourth column">
                         <img src="img/ohwhaledotco.jpg" alt="">
                     </div>
                     <div class="one-fourth column">
-                        <img src="img/kk_logo_purple.jpg" alt="">
+                        <img src="img/kk_logo.jpg" alt="">
                     </div>
                     <div class="one-fourth column">
                         <img src="img/cologne_color.png" alt="">
