fixed sizing of imgs, added in thumbnail

--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="one-fourth column">
-                        <img src="img/flowerknows_color.png" alt="">
+                    <div class="one-fourth column oneone-img">
+                        <img src="img/flowerknows_display.png" alt="">
                     </div>
-                    <div class="one-fourth column">
-                        <img src="img/ohwhaledotco.jpg" alt="">
+                    <div class="one-fourth column oneone-img">
+                        <img src="img/ohwhaledotco_display.png" alt="">
                     </div>
-                    <div class="one-fourth column">
-                        <img src="img/kk_logo.jpg" alt="">
+                    <div class="one-fourth column oneone-img">
+                        <img src="img/kk_logo.png" alt="">
                     </div>
-                    <div class="one-fourth column">
-                        <img src="img/cologne_color.png" alt="">
+                    <div class="one-fourth column oneone-img">
+                        <img src="img/cologne_display.png" alt="">
                     </div>
                 </div>
             </div>
