--- a/works.html
+++ b/works.html
@@ -32,13 +32,13 @@
         <section>
             <div class="row">
                 <div class="one-half">
-                    <div class="img-hold grow">
-                        <a href="placeholder.html"></a><img src="img/flowerknows_bottle.jpg" alt="placeholder">
+                    <div class="grow">
+                        <a href="placeholder.html"></a><img src="img/flowerknows_display.png" alt="flower knows corporate logo">
                     </div>
                 </div>
                 <div class="one-half">
-                    <div class="img-hold grow">
-                        <a href="placeholder.html"></a><img src="img/placeholder.png" alt="placeholder">
+                    <div class="grow">
+                        <a href="placeholder.html"></a><img src="img/ohwhaledotco_display.png" alt="ohwhaledotco">
                     </div>
                 </div>
             </div>
@@ -46,13 +46,13 @@
         <section>
             <div class="row">
                 <div class="one-half">
-                    <div class="img-hold grow">
-                        <a href="placeholder.html"></a><img src="img/placeholder.png" alt="placeholder">
+                    <div class="grow">
+                        <a href="placeholder.html"></a><img src="img/kk_logo.png" alt="placeholder">
                     </div>
                 </div>
                 <div class="one-half">
-                    <div class="img-hold grow">
-                        <a href="placeholder.html"></a><img src="img/placeholder.png" alt="placeholder">
+                    <div class="grow">
+                        <a href="placeholder.html"></a><img src="img/cologne_display.png" alt="placeholder">
                     </div>
                 </div>
             </div>
