start case study layout

--- a/index.html
+++ b/index.html
@@ -62,16 +62,17 @@
             <div class="container">
                 <div class="row">
                     <div class="one-fourth column oneone-img">
-                        <img src="img/flowerknows_display.png" alt="">
+                        <a href="flowerknows.html"><img src="img/flowerknows_display.png" alt="flower knows logo redesign"></a>
+                        
                     </div>
                     <div class="one-fourth column oneone-img">
-                        <img src="img/ohwhaledotco_display.png" alt="">
+                        <img src="img/ohwhaledotco_display.png" alt="ohwhale.co website redesign">
                     </div>
                     <div class="one-fourth column oneone-img">
-                        <img src="img/kk_logo.png" alt="">
+                        <img src="img/kk_logo.png" alt="welcome to kawaii kon visual essay">
                     </div>
                     <div class="one-fourth column oneone-img">
-                        <img src="img/cologne_display.png" alt="">
+                        <img src="img/cologne_display.png" alt="colone germany toursm logo design">
                     </div>
                 </div>
             </div>
