adjusted index svh and fixed img spacing

--- a/works.html
+++ b/works.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="one-half">
                     <div class="grow">
-                        <a href="placeholder.html"><img src="img/ohwhaledotco_display.png" alt="ohwhaledotco"></a>
+                        <a href="ohwhaleco.html"><img src="img/ohwhaledotco_display.png" alt="ohwhaledotco"></a>
                     </div>
                 </div>
             </div>
@@ -47,12 +47,12 @@
             <div class="row">
                 <div class="one-half">
                     <div class="grow">
-                        <a href="placeholder.html"><img src="img/kk_logo.png" alt="placeholder"></a>
+                        <a href="kawaiikon.html"><img src="img/kk_logo.png" alt="placeholder"></a>
                     </div>
                 </div>
                 <div class="one-half">
                     <div class="grow">
-                        <a href="placeholder.html"><img src="img/cologne_display.png" alt="placeholder"></a>
+                        <a href="cologne.html"><img src="img/cologne_display.png" alt="placeholder"></a>
                     </div>
                 </div>
             </div>
