updated header: temp logo & temp hero & color

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 
 
-<body>
-    <header class="site-header toggle-nav animated">
+<body class="home-page">
+    <header class="site-header toggle-nav animated on-top">
         <div class="site-id">
-            <h1><a href="index.html"><img src="img/katheren_graphic.png" alt="katheren logo" width="65" height="65"></a></h1>
+            <h1><a href="index.html"><img src="img/lam_logo.png" alt="katheren logo" width="65" height="65"></a></h1>
         </div>
         <nav class="site-navigation">
             <button class="menu-button navicon">Menu</button>
