--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <body>
     <header class="site-header toggle-nav animated">
         <div class="site-id">
-            <h1><a href="index.html"><img src="img/katheren_graphic.png" alt="katheren logo" width="65" height="65"></a></h1>
+            <h1><a href="index.html"><img src="img/lam_logo.png" alt="katheren logo" width="65" height="65"></a></h1>
         </div>
         <nav class="site-navigation">
             <button class="menu-button navicon">Menu</button>
@@ -29,17 +29,13 @@
     </header>
 
     <main class="site-main">
-        <!-- <section class="hero text-centered">
-            <h1>About Me</h1>
-            <p>This is a sub page example with a hero at top and stacked sections below.</p>
-        </section> -->
         <div class="container">
             <section>
-                <div class="row centered">
+                <div class="row">
                     <div class="one-fourth column about">
                         <img src="img/katheren_profile.jpg" alt="about me image" width="2228" height="2971">
                     </div>
-                    <div class="one-half column">
+                    <div class="two-thirds column">
                         <h2>Hello</h2>
                         <p>I am an interface design student at Kapi‘olani Community College seeking to learn more about the field of design and experiment with different visual styles. I do a little bit of everything and strive to be a versatile creator.</p>
                     </div>
