--- a/works.html
+++ b/works.html
@@ -16,7 +16,7 @@
 <body>
     <header class="site-header toggle-nav animated">
         <div class="site-id">
-            <h1><a href="index.html"><img src="img/katheren_graphic.png" alt="katheren logo" width="65" height="65"></a></h1>
+            <h1><a href="index.html"><img src="img/lam_logo.png" alt="katheren logo" width="65" height="65"></a></h1>
         </div>
         <nav class="site-navigation">
             <button class="menu-button navicon">Menu</button>
@@ -33,7 +33,21 @@
             <div class="row">
                 <div class="one-half">
                     <div class="grow">
-                        <a href="flowerknows.html"><img src="img/flowerknows_display.png" alt="flower knows corporate logo"></a>
+                        <a href="placeholder.html"><img src="img/fraufeuer.jpg" alt="Frau Feuer Product Design"></a>
+                    </div>
+                </div>
+                <div class="one-half">
+                    <div class="grow">
+                        <a href="placeholder.html"><img src="img/ss_placeholder.png" alt="Second Star Album Design"></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="row">
+                <div class="one-half">
+                    <div class="grow">
+                        <a href="flowerknows.html"><img src="img/FlowerKnows_BoxnBlush_Mockup.png" alt="flower knows corporate logo"></a>
                     </div>
                 </div>
                 <div class="one-half">
@@ -43,7 +57,8 @@
                 </div>
             </div>
         </section>
-        <section>
+        
+        <!-- <section>
             <div class="row">
                 <div class="one-half">
                     <div class="grow">
@@ -56,7 +71,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <footer class="site-footer">
