testing case study layout for frau feuer

--- a/flowerknows.html
+++ b/flowerknows.html
@@ -14,7 +14,7 @@
 </head>
 
 
-<body class="case-study">
+<body class="case-study-stick">
     <header class="site-header toggle-nav animated">
         <div class="site-id">
             <h1><a href="index.html"><img src="img/lam_logo.png" alt="katheren logo" width="65" height="65"></a></h1>
