--- a/works.html
+++ b/works.html
@@ -33,12 +33,12 @@
             <div class="row">
                 <div class="one-half">
                     <div class="grow">
-                        <a href="placeholder.html"><img src="img/fraufeuer.jpg" alt="Frau Feuer Product Design"></a>
+                        <a href="fraufeuer.html"><img src="img/fraufeuer.jpg" alt="Frau Feuer Product Design"></a>
                     </div>
                 </div>
                 <div class="one-half">
                     <div class="grow">
-                        <a href="placeholder.html"><img src="img/ss_placeholder.png" alt="Second Star Album Design"></a>
+                        <a href="secondstar.html"><img src="img/ss_placeholder.png" alt="Second Star Album Design"></a>
                     </div>
                 </div>
             </div>
