new hero, and minor spacing and text edits

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <img src="img/katheren_profile.jpg" alt="Profile Picture">
                     </div>
                     <div class="two-thirds column">
-                        <h2>Hello</h2>
+                        <h2>大家好！</h2>
                         <p>My name is Katheren Jia-Li Lam. 嘉 (Jia) meaning auspicious, 麗 (Li) meaning beauty, and 林 (Lam, also read as Lin or Lum) meaning forest.</p>
                         <p>I am a creator who’s learning wherever life takes me. I started my design career in 2022 at Kapiʻolani Community College after studying Business for 2 years.</p>
                         <p>When I’m not working, I enjoy playing video games, crocheting, and cooking!</p>
