--- a/index.html
+++ b/index.html
@@ -93,13 +93,41 @@
 
     <footer class="site-footer">
         <div class="container">
-            <nav class="site-navigation">
-                <ul class="nav">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="works.html">Works</a></li>
-                </ul>
-            </nav>
+            <div class="row">
+                <div class="column col-1 push-1">
+                    <div class="footer-logo">
+                        <a href="index.html"><img src="img/lam_logo.png" alt="lamb logo"></a>
+                    </div>
+                </div>
+                <div class="column col-1">
+                    <nav class="site-footer-nav">
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="works.html">Works</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="column col-2 push-5">
+                    <h3><span class="chinese">加油~</span></h3>
+                    <div class="link-icons">
+                        <p><a href="mailto:katheren@hawaii.edu"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg></a>
+
+                        <a href="https://www.instagram.com/takyyttik/"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-instagram"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"/></svg></a></p>
+                    </div>
+                </div>
+                <div class="column col-1 push-8 rotate-vert-n">
+                    <h5 class="rotate-vert">MY PROJECTS</h5>
+                </div>
+                <div class="column col-2 push-9 no-deco">
+                    <ul>
+                        <li><a href="flowerknows.html">Flower Knows</a></li>
+                        <li><a href="fraufeuer.html">Frau Feuer</a></li>
+                        <li><a href="secondstar.html">Second Star</a></li>
+                        <li><a href="ohwhaleco.html">ohwhale.co </a></li>                 
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
     
