--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <h2>大家好！ </h2>
                         <p>My name is Katheren Jia-Li Lam. <span class="chinese">嘉</span> (Jia) meaning auspicious, <span class="chinese">麗</span> (Li) meaning beauty, and <span class="chinese">林</span> (Lam, also read as Lin or Lum) meaning forest.</p>
                         <p>I am a creator who’s learning wherever life takes me. I started my design career in 2022 at Kapiʻolani Community College after studying Business for 2 years.</p>
-                        <p>When I’m not working, I enjoy playing video games, crocheting, and cooking!</p>
+                        <p>When I’m not working, I enjoy playing video games, crafting, and cooking!</p>
 
                         <h3>Contact</h3>
                         <p>Email: <a href="mailto:katheren@hawaii.edu">katheren@hawaii.edu</a></p>
@@ -111,13 +111,13 @@
                 <div class="column col-2 push-5">
                     <h3><span class="chinese">加油~</span></h3>
                     <div class="link-icons">
-                        <p><a href="mailto:katheren@hawaii.edu"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg></a>
+                        <p><a class="mail" href="mailto:katheren@hawaii.edu"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg></a>
 
-                        <a href="https://www.instagram.com/takyyttik/"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-instagram"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"/></svg></a></p>
+                        <a class="instagram" href="https://www.instagram.com/takyyttik/"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-instagram"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"/></svg></a></p>
                     </div>
                 </div>
                 <div class="column col-1 push-8 rotate-vert-n">
-                    <h5 class="rotate-vert">MY PROJECTS</h5>
+                    <h5 class="rotate-vert"><a href="works.html">MY PROJECTS</a></h5>
                 </div>
                 <div class="column col-2 push-9 no-deco">
                     <ul>
